--- a/graphics/2x8x7.html
+++ b/graphics/2x8x7.html
@@ -9,7 +9,7 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
@@ -40,13 +40,11 @@
 </head>
 <body> 
     <div id="app">
+        <zd-feed kind="8x7" left="0" top="0" width="768" height="672" :run-name="runName" player-num="0" nameplate-pos="bottomleft"></zd-feed>
+        <zd-feed kind="8x7" left="1152" top="0" width="768" height="672" :run-name="runName" player-num="1" nameplate-pos="bottomright"></zd-feed>
+        <zd-feed kind="cam" left="400" top="672" width="560" height="328" :run-name="runName"></zd-feed>
+        <zd-feed kind="cam" left="960" top="672" width="560" height="328" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
-        <zd-placeholder :kind="'8x7'" :left="0" :top="0" :width="768" :height="672" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'8x7'" :left="1152" :top="0" :width="768" :height="672" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="400" :top="672" :width="560" :height="328" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="960" :top="672" :width="560" :height="328" :run-name="runName"></zd-placeholder>
-        <zd-player id="p1" :num="0" :run-name="runName" :pos="'topright'"></zd-player>
-        <zd-player id="p2" :num="1" :run-name="runName"></zd-player>
         <zd-social></zd-social>
     </div>
 </body>
