--- a/graphics/1x16x9x2p.html
+++ b/graphics/1x16x9x2p.html
@@ -9,62 +9,33 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="./layout.js"></script>
     <style>
-        #place1 {
-            top: 104px;
-            left: 512px;
-            width: 1408px;
-            height: 792px;
-        }
-
-        #placecam1 {
-            width: 512px;
-            height: 500px;
-        }
-
-        #placecam2 {
-            top: 500px;
-            width: 512px;
-            height: 500px;
-        }
-
-        #p1 {
-            top: 44px;
-            left: 781px;
-        }
-
-        #p2 {
-            top: 896px;
-            left: 781px;
-        }
-
         .zd-timer {
-            bottom: 102px;
-            right: 369px;
+            top: 470px;
+            left: 140px;
         }
 
         .zd-social {
-            top: 22px;
-            right: 269px;
-            width: 400px;
-            height: 60px;
+            top: 530px;
+            width: 480px;
+            height: 470px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
+        <zd-feed kind="16x9" left="480" top="95" width="1440" height="810" :run-name="runName">
+            <template slot="top" slot-scope="{ pos }"><zd-player num="0" mem="0" :run-name="runName" :pos="pos"></zd-player></template>
+            <template slot="bottom" slot-scope="{ pos }"><zd-player num="0" mem="1" :run-name="runName" :pos="pos"></zd-player></template>
+        </zd-feed>
+        <zd-feed kind="cam" left="0" top="0" width="480" height="470" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
-        <zd-placeholder :kind="'16x9'" :left="512" :top="104" :width="1408" :height="792" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="0" :top="0" :width="512" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="0" :top="500" :width="512" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-player id="p1" :num="0" :run-name="runName" :pos="bottomright"></zd-player>
-        <zd-player id="p2" :num="1" :run-name="runName"></zd-player>
-        <zd-social class="zd-social--small"></zd-social>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
