--- a/graphics/1x16x9x4p.html
+++ b/graphics/1x16x9x4p.html
@@ -9,66 +9,36 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="./layout.js"></script>
     <style>
-        #place1 {
-            left: 512px;
-            top: 104px;
-            width: 1408px;
-            height: 792px;
-        }
-
-        #placecam1, #placecam2 {
-            width: 512px;
-            height: 500px;
-        }
-
-        #placecam2 {
-            top: 500px;
-        }
-
-        #p1, #p3 {
-            left: 512px;
-        }
-
-        #p2, #p4 {
-            right: 0px;
-        }
-
-        #p1, #p2 {
-            top: 44px;
-        }
-
-        #p3, #p4 {
-            top: 896px;
-        }
-
         .zd-timer {
-            top: 896px;
+            top: 905px;
             right: 604px;
         }
 
         .zd-social {
-            top: 44px;
-            right: 504px;
+            top: 330px;
+            width: 480px;
+            height: 340px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
+        <zd-feed kind="16x9" left="480" top="95" width="1440" height="810" :run-name="runName">
+            <template slot="topleft" slot-scope="{ pos }"><zd-player num="0" mem="0" :run-name="runName" :pos="pos"></zd-player></template>
+            <template slot="topright" slot-scope="{ pos }"><zd-player num="0" mem="1" :run-name="runName" :pos="pos"></zd-player></template>
+            <template slot="bottomleft" slot-scope="{ pos }"><zd-player num="0" mem="2" :run-name="runName" :pos="pos"></zd-player></template>
+            <template slot="bottomright" slot-scope="{ pos }"><zd-player num="0" mem="3" :run-name="runName" :pos="pos"></zd-player></template>
+        </zd-feed>
+        <zd-feed kind="cam" left="0" top="0" width="480" height="330" :run-name="runName"></zd-feed>
+        <zd-feed kind="cam" left="0" top="670" width="480" height="330" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
-        <zd-placeholder :kind="'16x9'" :left="512" :top="104" :width="1408" :height="792" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="0" :top="0" :width="512" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="0" :top="500" :width="512" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-player id="p1" :num="0" :mem="0" :run-name="runName" :pos="bottomleft"></zd-player>
-        <zd-player id="p2" :num="0" :mem="1" :run-name="runName" :pos="bottomright"></zd-player>
-        <zd-player id="p3" :num="0" :mem="2" :run-name="runName" :pos="topleft"></zd-player>
-        <zd-player id="p4" :num="0" :mem="3" :run-name="runName" :pos="topright"></zd-player>
-        <zd-social class="zd-social--small"></zd-social>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
