--- a/graphics/1x8x5.html
+++ b/graphics/1x8x5.html
@@ -9,38 +9,31 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="./layout.js"></script>
     <style>
-        #p1 {
-            top: 800px;
-            right: 440px;
-        }
-
         .zd-timer {
-            top: 900px;
-            right: 220px;
+            top: 470px;
+            left: 140px;
         }
 
         .zd-social {
-            top: 900px;
-            left: 760px;
-            width: 400px;
-            height: 60px;
+            top: 530px;
+            left: 0px;
+            width: 480px;
+            height: 470px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
+        <zd-feed kind="8x5" left="480" top="0" width="1440" height="900" :run-name="runName" player-num="0" nameplate-pos="bottom"></zd-feed>
+        <zd-feed kind="cam" left="0" top="0" width="480" height="470" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
-        <zd-placeholder :kind="'8x5'" :left="640" :top="0" :width="1280" :height="800" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="0" :top="0" :width="640" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="0" :top="500" :width="640" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-player id="p1" :num="0" :run-name="runName"></zd-player>
-        <zd-social class="zd-social--small"></zd-social>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
