--- a/graphics/1x8x7.html
+++ b/graphics/1x8x7.html
@@ -9,24 +9,19 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="./layout.js"></script>
     <style>
-        #p1 {
-            top: 440px;
-            right: 1144px;
-        }
-
         .zd-timer {
-            top: 440px;
+            top: 500px;
             left: 0px;
         }
 
         .zd-social {
-            top: 0px;
+            bottom: 100px;
             left: 0px;
             width: 776px;
             height: 440px;
@@ -35,10 +30,9 @@
 </head>
 <body>
     <div id="app">
+        <zd-feed kind="8x7" left="776" top="0" width="1144" height="1001" :run-name="runName"></zd-feed>
+        <zd-feed kind="cam" left="0" top="0" width="776" height="500" :run-name="runName" player-num="0" nameplate-pos="bottomright"></zd-feed>
         <zd-timer></zd-timer>
-        <zd-placeholder :kind="'8x7'" :left="776" :top="0" :width="1144" :height="1001" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="0" :top="500" :width="776" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-player id="p1" :num="0" :run-name="runName"></zd-player>
         <zd-social></zd-social>
     </div>
 </body>
