--- a/graphics/2x2x4x3.html
+++ b/graphics/2x2x4x3.html
@@ -9,45 +9,34 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="./layout.js"></script>
     <style>
-        #p1 {
-            left: 667px;
-        }
-
-        #p2 {
-            bottom: 80px;
-            right: 667px;
-        }
-
         .zd-timer {
-            top: 470px;
-            right: 667px;
-            width: 186px;
+            top: 500px;
+            left: 860px;
         }
 
         .zd-social {
-            top: 470px;
+            top: 560px;
             left: 667px;
+            width: 586px;
+            height: 380px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
+        <zd-feed kind="4x3" left="0" top="0" width="667" height="500" :run-name="runName" player-num="0" nameplate-pos="righttop"></zd-feed>
+        <zd-feed kind="4x3" left="0" top="500" width="667" height="500" :run-name="runName"></zd-feed>
+        <zd-feed kind="4x3" left="1253" top="0" width="667" height="500" :run-name="runName"></zd-feed>
+        <zd-feed kind="4x3" left="1253" top="500" width="667" height="500" :run-name="runName" player-num="1" nameplate-pos="leftbottom"></zd-feed>
+        <zd-feed kind="cam" left="667" top="60" width="586" height="440" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
-        <zd-placeholder :kind="'4x3'" :left="0" :top="0" :width="667" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'4x3'" :left="0" :top="500" :width="667" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'4x3'" :left="1253" :top="0" :width="667" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'4x3'" :left="1253" :top="500" :width="667" :height="500" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="667" :top="60" :width="586" :height="410" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="667" :top="530" :width="586" :height="410" :run-name="runName"></zd-placeholder>
-        <zd-player id="p1" :num="0" :run-name="runName" :pos="'left'"></zd-player>
-        <zd-player id="p2" :num="1" :run-name="runName" :pos="'right'"></zd-player>
-        <zd-social class="zd-social--small"></zd-social>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
