--- a/graphics/2x5x3.html
+++ b/graphics/2x5x3.html
@@ -9,47 +9,32 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="./layout.js"></script>
     <style>
-        #p1, #p2 {
-            top: 576px;
-        }
-
-        #p1 {
-            left: 0px;
-        }
-
-        #p2 {
-            right: 0px;
-        }
-
         .zd-timer {
             right: 100px;
-            top: 921px;
+            top: 788px;
         }
 
         .zd-social {
-            left: 0px;
-            top: 921px;
+            top: 636px;
             width: 400px;
-            height: 60px;
+            height: 364px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
+        <zd-feed kind="5x3" left="0" top="0" width="960" height="576" :run-name="runName" player-num="0" nameplate-pos="bottomleft"></zd-feed>
+        <zd-feed kind="5x3" left="960" top="0" width="960" height="576" :run-name="runName" player-num="1" nameplate-pos="bottomright"></zd-feed>
+        <zd-feed kind="cam" left="400" top="576" width="560" height="424" :run-name="runName"></zd-feed>
+        <zd-feed kind="cam" left="960" top="576" width="560" height="424" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
-        <zd-placeholder :kind="'5x3'" :left="0" :top="0" :width="960" :height="576" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'5x3'" :left="960" :top="0" :width="960" :height="576" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="400" :top="576" :width="560" :height="424" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="960" :top="576" :width="560" :height="424" :run-name="runName"></zd-placeholder>
-        <zd-player id="p1" :num="0" :run-name="runName" :pos="'topright'"></zd-player>
-        <zd-player id="p2" :num="1" :run-name="runName"></zd-player>
-        <zd-social class="zd-social--small"></zd-social>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
