--- a/graphics/e1x3x2.html
+++ b/graphics/e1x3x2.html
@@ -13,26 +13,38 @@
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
+    <script defer src="../shared/components/checkpoint.js"></script>
     <script defer src="./layout.js"></script>
     <style>
         .zd-timer {
-            top: 470px;
-            left: 140px;
+            top: 360px;
+            left: 110px;
         }
 
         .zd-social {
-            top: 530px;
-            width: 480px;
-            height: 470px;
+            top: 420px;
+            width: 420px;
+            height: 280px;
+        }
+
+        .zd-checkpoint {
+            top: 700px;
+            width: 420px;
+            height: 300px;
+        }
+
+        .zd-checkpoint > div > div:nth-child(2) {
+            font-size: 0.8em;
         }
     </style>
 </head>
 <body> 
     <div id="app">
-        <zd-feed kind="16x9" left="480" top="95" width="1440" height="810" :run-name="runName" player-num="0"></zd-feed>
-        <zd-feed kind="cam" left="0" top="0" width="480" height="470" :run-name="runName"></zd-feed>
+        <zd-feed kind="3x2" left="420" top="0" width="1500" height="1000" :run-name="runName"></zd-feed>
+        <zd-feed kind="cam" left="0" top="0" width="420" height="300" :run-name="runName"  player-num="0" total-num-displayed="1"></zd-feed>
         <zd-timer></zd-timer>
         <zd-social></zd-social>
+        <zd-checkpoint></zd-checkpoint>
     </div>
 </body>
 </html>
