--- a/graphics/e2x3x2.html
+++ b/graphics/e2x3x2.html
@@ -9,28 +9,24 @@
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
-    <script defer src="../shared/components/placeholder.js"></script>
+    <script defer src="../shared/components/feed.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/components/checkpoint.js"></script>
     <script defer src="./layout.js"></script>
     <style>
-        #p1, #p2 {
-            top: 640px;
+        .zd-feed:nth-of-type(1) .zd-player {
+            left: 400px !important;
         }
 
-        #p1 {
-            left: 400px;
+        .zd-feed:nth-of-type(2) .zd-player {
+            left: 160px !important;
         }
-
-        #p2 {
-            right: 400px;
-        }
-
+        
         .zd-timer {
             top: 640px;
-            right: 100px;
+            left: 860px;
         }
 
         .zd-social {
@@ -43,7 +39,7 @@
             right: 0px;
             bottom: 80px;
             width: 400px;
-            height: 300px;
+            height: 360px;
         }
 
         .zd-checkpoint > div > div:nth-child(2) {
@@ -53,13 +49,11 @@
 </head>
 <body> 
     <div id="app">
+        <zd-feed kind="3x2" left="0" top="0" width="960" height="640" :run-name="runName" player-num="0" total-num-displayed="2"></zd-feed>
+        <zd-feed kind="3x2" left="960" top="0" width="960" height="640" :run-name="runName" player-num="1" total-num-displayed="2"></zd-feed>
+        <zd-feed kind="cam" left="400" top="700" width="560" height="300" :run-name="runName"></zd-feed>
+        <zd-feed kind="cam" left="960" top="700" width="560" height="300" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
-        <zd-placeholder :kind="'3x2'" :left="0" :top="0" :width="960" :height="640" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'3x2'" :left="960" :top="0" :width="960" :height="640" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="400" :top="700" :width="560" :height="300" :run-name="runName"></zd-placeholder>
-        <zd-placeholder :kind="'cam'" :left="960" :top="700" :width="560" :height="300" :run-name="runName"></zd-placeholder>
-        <zd-player id="p1" :num="0" :run-name="runName" :type="'elimination'" :total-num-displayed="2"></zd-player>
-        <zd-player id="p2" :num="1" :run-name="runName" :pos="'topright'" :type="'elimination'" :total-num-displayed="2"></zd-player>
         <zd-social></zd-social>
         <zd-checkpoint></zd-checkpoint>
     </div>
